# saltshore

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: enhancement.yml
.github/actions/build-docs/: action.yml
.github/actions/post-checkout/: action.yml
.github/workflows/: book.yml  code_coverage.yml  continuous_integration.yml
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/001_front_matter/: introduction.md
docs/src/003_scripting/: _introduction.md
docs/src/004_dungeons/: _introduction.md
docs/theme/: highlight.js
examples/sork/: README.md  main.rs
examples/sork/zork-i/: 1actions.zil  1dungeon.zil  gmacros.zil  gsyntax.zil  gverbs.zil  zork1.zil
git/hooks/: pre-commit
scripts/: build_docs.sh  rm_old_branches.sh
src/: command.rs  game.rs  input.rs  lib.rs  output.rs  parser.rs
src/command/: command.rs  commands.rs  error.rs
src/command/commands/: quit.rs  succeed.rs  throw_error.rs
src/game/: error.rs  loop.rs  state.rs
src/input/: error.rs  mock.rs  reader.rs
src/output/: error.rs  mock.rs  writer.rs
src/parser/: error.rs  parser.rs
